his file contains a brief description of Knotter releases,
showing when features have been added to the program.

Knotter 0.8.0  - Ongoing development
--------------------
* Single per-node style settings parameters can be toggled from default to custom
* Dock controlling selected node style
* Optimization, mostly noticeable when loading a graph and pasting
* Website at http://www.knotdraw.org/
* Printing options
* Exported SVG generates a path per loop
* Highlight separate loops
* Open multiple files from "Open..."
* "Configure Grid" as a dock
* Better display for "WALL" edges

Knotter 0.7.0
--------------------
* Command Line Interface
* Use system-wide clipboard for copy/pase (copy SVG as well)
* Friendly rotate/scale user interaction
* RPM packaging script
* Statusbar zoomer
* Background configuration
* Multiple documents
* Accept dropped files

Knotter 0.6.0
--------------------
* Insert polygons
* Break edges
* Customizable Toolbars
* Czech translation
* Italian translation
* New "Round" cusp style
* Optional fallback icon theme
* Option to save style between sessions
* Deb packaging script

Knotter 0.5.0
--------------------
NOTE:
Knotter 0.5.0 introduces some incompatibility with old .knot files!
Old files will still be loaded but you have to adjust a few style settings

* Advanced Export Options
* Movable Grid
* User Manual
* Dockable dialogs
* Per-node settings
* New shape algorithm
* Option to enable knot caching

Knotter 0.4.0
--------------------
* Hide/show graph/knot
* Initial error recovery
* Better Flip selection
* Scale/Rotate selection
* Export bitmap
* Configuration
* Save/restore status

Knotter 0.3.0
--------------------
* Snap to Grid
* i18n setup
* Pen Style
* Better Mouse Input
* Flip selection

Knotter 0.2.0
---------------------
* Zooming
* Copy/Paste

Knotter 0.1.0
---------------------
First public release
* Basic Editing
* Open/Save
* Undo/Redo
* Style
* SVG Export