@@ -218,7 +218,9 @@ class Knot_Window : public QMainWindow, private Ui::Knot_Window
         void on_action_Print_triggered();
         void on_actionPage_Set_up_triggered();
         void on_actionPr_int_Preview_triggered();
-        void on_action_Highlight_loops_triggered(bool checked);
+        void on_action_Highlight_loops_triggered();
+        void on_action_Normal_Rendering_triggered();
+        void on_action_Simplified_triggered();
 };
 
 #endif // KNOT_WINDOW_HPP
